Multiple Fixes
- Added missing card css
- Replaced incorrect `<<He>>` with `<<pshe>>` before playing blackjack at the Remy's estate
- Removed Duplicate settings again and corrected the value if it was too high
- Added code to fix nulls in the wardrobe

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -632,6 +632,34 @@ body.has-images #story-caption .storyCaptionDivExtended {
 	margin-bottom: 0.5em;
 }
 
+.highlow div {
+	float: left;
+	margin: 10px 15px;
+	text-align:center;
+}
+
+.highlow div > * {
+	float: none;
+}
+
+.card {
+	width:50px;
+	height:75px;
+	border:1px solid #ccc;
+	margin-right:7px;
+	margin-bottom:7px;
+	border-radius:7px;
+	padding-top: 10px;
+}
+
+span.number, span.suit {
+	width:100%;
+	display:block;
+	text-align:center;
+	padding-top: 2px;
+	padding-bottom: 2px;
+}
+
 .red {
 	color: #EC3535;
 }
